@@ -1,3 +1,6 @@
+2010-05-04 Improve backend_qt4 so it displays figures with the
+           correct size - DSD
+
 2010-04-20 Added generic support for connecting to a timer for events. This
            adds TimerBase, TimerGTK, TimerQT, TimerWx, and TimerTk to
            the backends and a new_timer() method to each backend's
